[gd_scene load_steps=3 format=3 uid="uid://7m2hmcqkmrp5"]

[ext_resource type="Script" path="res://addons/dialogue_viewer/scripts/line_box.gd" id="1_7pgt2"]
[ext_resource type="Texture2D" uid="uid://sbflvwcsoao0" path="res://addons/dialogue_viewer/delete-icon.png" id="1_fyvdx"]

[node name="LineBox" type="VBoxContainer"]
offset_right = 423.0
offset_bottom = 82.0
mouse_filter = 0
script = ExtResource("1_7pgt2")

[node name="Main" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Line" type="LineEdit" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "Enter Dialogue Here..."

[node name="Button" type="Button" parent="Main"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
icon = ExtResource("1_fyvdx")
expand_icon = true

[node name="AddButtonsContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="AddLineButton" type="Button" parent="AddButtonsContainer"]
layout_mode = 2
mouse_filter = 1
text = "Add Line"

[node name="AddOptionsButton" type="Button" parent="AddButtonsContainer"]
layout_mode = 2
mouse_filter = 1
text = "Add Option"

[connection signal="mouse_exited" from="." to="." method="_hide_buttons"]
[connection signal="focus_entered" from="Main/Line" to="." method="_show_buttons"]
[connection signal="pressed" from="Main/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AddButtonsContainer/AddLineButton" to="." method="_on_add_line_button_pressed"]
[connection signal="pressed" from="AddButtonsContainer/AddOptionsButton" to="." method="_on_add_options_button_pressed"]
